Hehehehe Pika - Stored BG Image locally

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
             flex-direction: column; /* Stack children vertically */
             
             align-items: center; /* Center horizontally */
-            background-image: url('https://creator.nightcafe.studio/jobs/VMTx9ddLBDYhKsjUIziq/VMTx9ddLBDYhKsjUIziq--2--ihwh7.jpg'); /* Add a Pokémon-themed background image */
+            /*Backgroun image from file bg.webp*/
+            background-image: url('bg.webp');
             background-size: cover;
             background-repeat: no-repeat;
             animation: fadeIn 1s; /* Fade-in animation for the body */
